
Revision history for Perl module MCE.

1.889 Wed Sep 13 15:00:00 EST 2023

  * Add Android support. Thank you, Dimitrios Kechagias.
  * Improve mutex synchronize (aka enter) with guard capability.
    Thank you, José Joaquín Atria.
  * Fix mutex re-entrant lock on the Windows platform.
  * Add mutex guard_lock method.

1.888 Wed Jun 21 17:00:00 EST 2023

  * Fix typos caught by lintian. Thank you, Étienne Mollier.

1.887 Fri Jun 09 08:00:00 EST 2023

  * Fix typo in Queue dequeue_timed documentation.
    Thank you, Łukasz Strzelecki.

1.886 Tue Jun 06 12:00:00 EST 2023
    
  * Added dequeue_timed method to MCE::Queue.
  * Fixed taint mode in MCE->printf and _sprintf.
  * Improved reliability on the Windows platform.

1.885 Tue May 30 20:00:00 EST 2023
    
  * Improved reliability on the Windows platform.

1.884 Thu Jan 05 10:00:00 EST 2023

  * Disabled non-blocking dequeue_nb and recv_nb tests on the Windows platform.
    Reason: Author cannot reproduce failing tests reported by CPAN Tester aero.
    Copied nb tests to xt folder: nonblocking_channel.t and nonblocking_queue.t

1.883 Tue Jan 03 20:00:00 EST 2023

  * Fix typo in MCE::Channel::SimpleFast documentation.
  * Improve 05_mce_child.t test.

1.882 Fri Dec 02 21:00:00 EST 2022

  * Added ABRT to the list of signals to trap in MCE::Signal.
  * Added a guard to MCE::Core::Worker for checking if exited prematurely.
  * Added init_relay and use_threads import options to MCE and MCE Models.
  * Separated input mutexes from the rest of IPC for lesser latency.

  * Auto-detect if init_relay is defined and set chunk_size to 1 in
    MCE::Grep, MCE::Map, and MCE::Stream.
  * Update the import function in MCE models, detecting if the caller
    is another MCE module, to not export model functions.

  * Update the error status if MCE::Child died due to receiving a signal.
  * Improved reaping in MCE::Child, before creating a new child.
  * Improved the timeout handler in MCE::Child and MCE::Mutex::Channel.