@@ -4,6 +4,7 @@ Revision history for Perl module MCE.
 1.889 Wed Sep 13 15:00:00 EST 2023
 
   * Add Android support. Thank you, Dimitrios Kechagias.
+  * Revert defer signal-handling in MCE::Channel (send2 method).
   * Improve mutex synchronize (aka enter) with guard capability.
     Thank you, José Joaquín Atria.
   * Fix mutex re-entrant lock on the Windows platform.
